--- a/www/index.html
+++ b/www/index.html
@@ -5,13 +5,13 @@
 </head>
 <body bgcolor=" LIGHTBLUE">
 
-    <center><h1><font style="font-size: 100px;">Add Contacts</h1></font></center>
+    <center><h1><font style="font-size: 70px;">Add Contacts</h1></font></center>
 
 <script >
 function Save(){
     var name = document.getElementById('name').value;
     if (name=="") {
-        alert('Type your name here')
+        alert('Please type your name ')
     }
     else{
         window.localStorage.setItem('name',document.getElementById('name').value);
@@ -20,7 +20,7 @@ function Save(){
     }
         var number = document.getElementById('number').value;
     if (number =="") {
-        alert('Type your number here')
+        alert('Please type your number ')
     }
     else{
         window.localStorage.setItem('number',document.getElementById('number').value);
@@ -29,7 +29,7 @@ function Save(){
     }
     var email = document.getElementById('email').value;
     if (email =="") {
-        alert('Type your email here')
+        alert('Please type your email ')
     }
     else{
         window.localStorage.setItem('email',document.getElementById('email').value);
@@ -60,34 +60,34 @@ function bura(){
 
 <CENTER><TABLE>
 <TR>
-    <TD bgcolor=pink style=" width: 200px; height: 40px; text-align: center; font-family: 'Calibri';color: white; font-size: 30px">Name</TD>
+    <TD bgcolor=pink style=" width: 100px; height: 35px; text-align: center; font-family: 'Calibri';color: white; font-size: 25px">Name</TD>
 </TR>
 </TABLE>
-<input type="text" id="name" placeholder="insert your name" style="text-align: center; width: 300px; height: 40px; font-size: 30px"><br><br><br>
+<input type="text" id="name" placeholder="insert your name" style="text-align: center; width: 250px; height: 35px; font-size: 25px"><br><br><br>
 
 <TABLE>
 <TR>
-    <TD  bgcolor=pink style="width: 200px; height: 40px; text-align: center; font-family: 'Calibri'; color: white; font-size: 30px">Number</TD>
+    <TD  bgcolor=pink style="width: 100px; height: 35px; text-align: center; font-family: 'Calibri'; color: white; font-size: 25px">Number</TD>
 </TR>
 </TABLE>
-<input type="text" id="number" placeholder="insert your number" style="text-align: center; width: 300px; height: 40px; font-size: 30px"><br><br><br>
+<input type="text" id="number" placeholder="insert your number" style="text-align: center; width: 250px; height: 35px; font-size: 25px"><br><br><br>
 
 
 <TABLE>
 <TR>
-    <TD bgcolor=pink style="width: 200px; height: 40px; text-align: center; font-family: 'Calibri';color: white; font-size: 30px">Email</TD>
+    <TD bgcolor=pink style="width: 100px; height: 35px; text-align: center; font-family: 'Calibri';color: white; font-size: 25px">Email</TD>
 </TR>
 </TABLE>
-<input type="text" id="email" placeholder="insert your email" style="text-align: center; width: 300px; height: 40px; font-size: 30px"></center><br><br><br>
+<input type="text" id="email" placeholder="insert your email" style="text-align: center; width: 250px; height: 35px; font-size: 25px"></center><br><br><br>
 
-<center><button onclick="Save()" style="font-weight:bold; font-size:30px;margin-left: 4%; height:50px;width:150px; background-color:lightblue; font-family: 'Calibri'" >Save</button>
+<center><button onclick="Save()" style="font-weight:bold; font-size:30px;margin-left: 1%; height:50px;width:150px; background-color:lightblue; font-family: 'Calibri'" >Save</button>
 
 
-<button type="button" onclick="bura()" id="clearAll" style="margin-left: 4%; background-color: lightblue; height: 50px; width: 150px; font-family: 'Calibri'; font-weight: bold; font-size: 30px">Cancel</button>
+<button type="button" onclick="bura()" id="clearAll" style="margin-left: 1%; background-color: lightblue; height: 50px; width: 150px; font-family: 'Calibri'; font-weight: bold; font-size: 30px">Cancel</button>
 
-<button  onclick="back()" type="button" style="margin-left: 4%; background-color: lightblue; height: 50px; width: 150px; font-family: 'Calibri'; font-weight: bold; font-size: 30px">Restore</button>
+<button  onclick="back()" type="button" style="margin-left: 1%; background-color: lightblue; height: 50px; width: 150px; font-family: 'Calibri'; font-weight: bold; font-size: 30px">Restore</button>
 
-<a href="LIST.HTML"><button style="margin-left: 4%; background-color: lightblue; height: 50px; width: 150px; font-family: 'Calibri'; font-weight: bold; font-size: 30px">List</button></a>
+<a href="LIST.HTML"><button style="margin-left: 1%; background-color: lightblue; height: 50px; width: 150px; font-family: 'Calibri'; font-weight: bold; font-size: 30px">List</button></a>
 
 </center>
 
