--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor=" LIGHTBLUE">
 
-    <center><h1><font style="font-size: 70px;">Add Contacts</h1></font></center>
+    <center><h1><font style="font-size: 70p;">Add Contacts</h1></font></center>
 
 <script >
 function Save(){
@@ -60,34 +60,34 @@ function bura(){
 
 <CENTER><TABLE>
 <TR>
-    <TD bgcolor=pink style=" width: 100px; height: 35px; text-align: center; font-family: 'Calibri';color: white; font-size: 25px">Name</TD>
+    <TD bgcolor=pink style=" width: 100; height: 35; text-align: center; font-family: 'Calibri';color: white; font-size: 25">Name</TD>
 </TR>
 </TABLE>
-<input type="text" id="name" placeholder="insert your name" style="text-align: center; width: 250px; height: 35px; font-size: 25px"><br><br><br>
+<input type="text" id="name" placeholder="insert your name" style="text-align: center; width: 250; height: 35; font-size: 25"><br><br><br>
 
 <TABLE>
 <TR>
-    <TD  bgcolor=pink style="width: 100px; height: 35px; text-align: center; font-family: 'Calibri'; color: white; font-size: 25px">Number</TD>
+    <TD  bgcolor=pink style="width: 100; height: 35; text-align: center; font-family: 'Calibri'; color: white; font-size: 25">Number</TD>
 </TR>
 </TABLE>
-<input type="text" id="number" placeholder="insert your number" style="text-align: center; width: 250px; height: 35px; font-size: 25px"><br><br><br>
+<input type="text" id="number" placeholder="insert your number" style="text-align: center; width: 250; height: 35; font-size: 25"><br><br><br>
 
 
 <TABLE>
 <TR>
-    <TD bgcolor=pink style="width: 100px; height: 35px; text-align: center; font-family: 'Calibri';color: white; font-size: 25px">Email</TD>
+    <TD bgcolor=pink style="width: 100; height: 35; text-align: center; font-family: 'Calibri';color: white; font-size: 25">Email</TD>
 </TR>
 </TABLE>
-<input type="text" id="email" placeholder="insert your email" style="text-align: center; width: 250px; height: 35px; font-size: 25px"></center><br><br><br>
+<input type="text" id="email" placeholder="insert your email" style="text-align: center; width: 250; height: 35; font-size: 25"></center><br><br><br>
 
-<center><button onclick="Save()" style="font-weight:bold; font-size:30px;margin-left: 1%; height:50px;width:150px; background-color:lightblue; font-family: 'Calibri'" >Save</button>
+<center><button onclick="Save()" style="font-weight:bold; font-size:30;margin-left: 1%; height:50;width:150; background-color:lightblue; font-family: 'Calibri'" >Save</button>
 
 
-<button type="button" onclick="bura()" id="clearAll" style="margin-left: 1%; background-color: lightblue; height: 50px; width: 150px; font-family: 'Calibri'; font-weight: bold; font-size: 30px">Cancel</button>
+<button type="button" onclick="bura()" id="clearAll" style="margin-left: 1%; background-color: lightblue; height: 50; width: 150; font-family: 'Calibri'; font-weight: bold; font-size: 30">Cancel</button>
 
-<button  onclick="back()" type="button" style="margin-left: 1%; background-color: lightblue; height: 50px; width: 150px; font-family: 'Calibri'; font-weight: bold; font-size: 30px">Restore</button>
+<button  onclick="back()" type="button" style="margin-left: 1%; background-color: lightblue; height: 50; width: 150; font-family: 'Calibri'; font-weight: bold; font-size: 30">Restore</button>
 
-<a href="LIST.HTML"><button style="margin-left: 1%; background-color: lightblue; height: 50px; width: 150px; font-family: 'Calibri'; font-weight: bold; font-size: 30px">List</button></a>
+<a href="LIST.HTML"><button style="margin-left: 1%; background-color: lightblue; height: 50; width: 150; font-family: 'Calibri'; font-weight: bold; font-size: 30">List</button></a>
 
 </center>
 
