--- a/www/LIST.HTML
+++ b/www/LIST.HTML
@@ -4,11 +4,11 @@
 	<title></title>
 </head>
 <body bgcolor="lightblue">
-		<center><h1><font style="font-size: 70px;">Contacts List</h1></font></center>
+		<center><h1><font style="font-size: 70;">Contacts List</h1></font></center>
 	<hr style="background-color: black">	
-<input readonly="true" id="name" style="background-color: transparent; border-color: transparent; font-size: 50px;padding-left: 10px;padding-top:5px;font-family: 'Times New Roman'" ><br>
-<input readonly="true" id="number" style="background-color: transparent; border-color: transparent;font-size: 50px;padding-left: 10px;padding-top: 5px; font-family: 'Times New Roman'"><br>
-<input readonly="true" id="email" style="background-color: transparent; border-color: transparent;font-size: 50px;padding-left: 10px;padding-top: 5px; font-family: 'Times New Roman'">
+<input readonly="true" id="name" style="background-color: transparent; border-color: transparent; font-size: 50;padding-left: 10p;padding-top:5;font-family: 'Times New Roman'" ><br>
+<input readonly="true" id="number" style="background-color: transparent; border-color: transparent;font-size: 50;padding-left: 10;padding-top: 5; font-family: 'Times New Roman'"><br>
+<input readonly="true" id="email" style="background-color: transparent; border-color: transparent;font-size: 50;padding-left: 10;padding-top: 5; font-family: 'Times New Roman'">
 </body>
 <script>
 	document.getElementById('name').value = window.localStorage.getItem('name');
